2005-11-22  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>

	* library/tkfbox.tcl (::tk::dialog::file::): Correct the quoting of
	the script used in variable traces so that widget names with spaces in
	will work. [Bug 1335485]

2005-11-16  Vince Darley <vincentdarley@users.sourceforge.net>

	* doc/text.n: clarify left to right interpretation of index modifiers,
	including the fact that validation occurs after each step. [Bug
	1357575]

2005-11-15  Joe English  <jenglish@users.sourceforge.net>

	* unix/tkUnixWm.c, tests/unixWm.test, doc/wm.n:
	Support for [wm attributes] on X11 [TIP#231, Patch 1062022].

2005-11-14  Joe English  <jenglish@users.sourceforge.net>

	* library/bgerror.tcl: Truncate error messages at 45 characters
	instead of 30 [Bug 1224235].

2005-11-14  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>

	* generic/tkSelect.c (TkSelDefaultSelection): Test select-9.5
	highlighted further brokenness in this function.

2005-11-13  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>

	* unix/tkUnixSelect.c (SelCvtToX): Arrange for the parsing code to
	use Tcl's list parsing code, another simplification that enables
	testing of the [Bug 1353414] fix.

	* unix/tkUnixSelect.c (SelCvtFromX): Generate string forms of the
	advanced selection types in a Tcl_DString. This makes fixing [Bug
	1353414] trivial, and simplifies the code at the same time.
	* tests/select.test (select-9.5): Added test for [Bug 1353414]

2005-11-10  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>

	* generic/tkBind.c (ChangeScreen):		More DString fixes from
	* generic/tkTextWind.c (EmbWinLayoutProc):	[Bug 1353022]
	* win/tkWinMenu.c (SetDefaults):

	* win/tkWinDialog.c (ConvertExternalFilename): Factored out the
	encoding conversion and de-backslash-ing code that is used in many
	places in this file.
	(GetFileNameW, GetFileNameA, ChooseDirectoryValidateProc): Make sure
	that data is freed correctly and that certain (hopefully impossible)